Fix Embed Adj Collapse borking lists

--- a/SCSS/Theme Rewrite/custom-css/embed-adjustments/_emb-adj-margin-padding.scss
+++ b/SCSS/Theme Rewrite/custom-css/embed-adjustments/_emb-adj-margin-padding.scss
@@ -10,10 +10,8 @@
 
     //temp
     & *:not(.tag, .callout) { 
-        margin: 0;
         margin-block-start: 0; 
         margin-block-end: 0;
-        padding: 0;
     }
 
 }
